Refactor: Replace list access with first/last methods for improved readability